Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
                                 <span>Database Management</span>
                             </div>
                             <div class="project-links">
-                                <a href="https://github.com/yourusername/student-management" class="project-link">
+                                <a href="https://github.com/BASMAG14/Gestion-des-tudiants-avec-C-.git" class="project-link">
                                     <i class="fab fa-github"></i> View Code
                                 </a>
                             </div>
@@ -739,3 +739,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
